--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "18ef4d90-c311-42f3-996a-4215a6125a7b"
+        "outputId": "38c73b16-dc52-485e-da96-48ca82cdef01"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
             "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: highway-env\n",
             "Successfully installed highway-env-1.10.1\n"
           ]
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -127,24 +127,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "e4008c13-ee00-4c99-f15c-64d68c1ceb68"
+        "outputId": "39cc5ecb-df16-48bc-f013-b452f20d5b14"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7c161260c150>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7d282f263a90>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ],
       "source": [
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -576,13 +576,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "RYA-H09sIw2_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a477a53-6b83-4939-dc25-88b9776b9396"
+        "outputId": "b1646df4-657e-436c-d3bb-eb87dd77c61a"
       },
       "outputs": [
         {
@@ -646,9 +646,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHIrzE6I42nB",
-        "outputId": "b7c197fa-35c9-4a20-beb1-abaa4766d880"
+        "outputId": "62df46e3-93ff-4569-9f4c-a5d8ac4eb123"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -738,6 +738,11 @@
         "\n",
         "    # Collect trajectories with dual stopping condition\n",
         "    while episodes_completed_in_rollout < max_episodes_per_rollout:\n",
+        "      # Episode Rest\n",
+        "      state_manager.update(obs)\n",
+        "      target_id = env.unwrapped.vehicle.lane_index[-1]\n",
+        "      agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
+        "\n",
         "      while not done:\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
         "        activated_target_lane = gap_control.lane_checker()\n",
@@ -786,25 +791,10 @@
         "        t += 1  # Increment timestep counter\n",
         "        obs_old = obs\n",
         "\n",
-        "        # Update IDM inputs for next iteration\n",
-        "        ego_state_idm = state_manager.ego_state_idm()\n",
-        "        lead_state = state_manager.longitudinal_lead_state()\n",
-        "        gap = lead_state['x']\n",
-        "        delta_velocity = lead_state['vx']\n",
-        "        input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
-        "\n",
         "        # If episode is done, track results and increment episode counter\n",
         "        if done:\n",
         "            episodes_completed_in_rollout += 1\n",
         "            total_env_episodes += 1\n",
-        "\n",
-        "            # Reset environment if more episodes needed\n",
-        "            if episodes_completed_in_rollout < max_episodes_per_rollout and t < T:\n",
-        "                obs, _ = env.reset()\n",
-        "                state_manager.update(obs)\n",
-        "                target_id = env.unwrapped.vehicle.lane_index[-1]\n",
-        "                obs_old = obs\n",
-        "                done = False\n",
         "\n",
         "    # Actual number of timesteps collected\n",
         "    actual_T = t\n",
