--- a/V3.ipynb
+++ b/V3.ipynb
@@ -738,10 +738,10 @@
         "\n",
         "    # Collect trajectories with dual stopping condition\n",
         "    while episodes_completed_in_rollout < max_episodes_per_rollout:\n",
-        "      # Episode Rest\n",
+        "\n",
+        "      # Episode Reset\n",
+        "      obs, _ = env.reset()\n",
         "      state_manager.update(obs)\n",
-        "      target_id = env.unwrapped.vehicle.lane_index[-1]\n",
-        "      agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
         "\n",
         "      while not done:\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
