--- a/V3.ipynb
+++ b/V3.ipynb
@@ -683,7 +683,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "vf_coeff_cl = 0.5\n",
         "ent_coef_c2 = 0.01\n",
-        "nb_episodes = 1000\n",
+        "nb_batches = 1000\n",
         "epsilon = 0.2\n",
         "gae_lambda = 0.99\n",
         "max_episodes_per_rollout = 10\n",
@@ -708,7 +708,7 @@
         "individual_test_episodes = []\n",
         "\n",
         "# Training loop\n",
-        "for episode in tqdm.tqdm(range(nb_episodes)):\n",
+        "for batch in tqdm.tqdm(range(nb_batches)):\n",
         "\n",
         "    # PPO Initialization\n",
         "    advantages = torch.zeros(T, dtype=torch.float32, device=device)\n",
@@ -879,10 +879,10 @@
         "            critic_optimizer.step()\n",
         "\n",
         "    # Print rollout info\n",
-        "    print(f\"Training Batch {episode}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
+        "    print(f\"Training Batch {batch}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
         "\n",
         "    # Testing every 10 episodes\n",
-        "    if episode % 10 == 0 and episode > 0:\n",
+        "    if batch % 10 == 0 and batch > 0:\n",
         "        test_rewards = []\n",
         "\n",
         "        for test_ep in range(3):  # Reduced to 3 test episodes for speed\n",
@@ -922,16 +922,16 @@
         "            max_reward = current_max\n",
         "\n",
         "        batch_average_reward_history.append(avg_test_reward)\n",
-        "        batch_episode_history.append(episode)\n",
+        "        batch_episode_history.append(batch)\n",
         "\n",
-        "        print(f\"Episode {episode}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
+        "        print(f\"Episode {batch}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
         "\n",
-        "    # Plot every 50 episodes\n",
-        "    if episode % 50 == 0 and episode > 0 and batch_average_reward_history:\n",
+        "    # Plot every 5 btaches\n",
+        "    if batch % 5 == 0 and batch > 0 and batch_average_reward_history:\n",
         "        plt.figure(figsize=(10, 6))\n",
         "        plt.plot(batch_episode_history, batch_average_reward_history, 'r-o', linewidth=2)\n",
-        "        plt.title(f\"Test Performance (Episode {episode}, Max: {max_reward:.1f})\")\n",
-        "        plt.xlabel(\"Episode\")\n",
+        "        plt.title(f\"Test Performance (Batch {batch}, Max: {max_reward:.1f})\")\n",
+        "        plt.xlabel(\"Batch (10 Episodes)\")\n",
         "        plt.ylabel(\"Average Reward\")\n",
         "        plt.grid(True, alpha=0.3)\n",
         "        plt.show()\n",
