--- a/V3.ipynb
+++ b/V3.ipynb
@@ -670,7 +670,7 @@
       "cell_type": "code",
       "source": [
         "# Define hyperparameters\n",
-        "T = 1000  # Max timesteps per rollout\n",
+        "max_timesteps_per_rollout = 1000  # Max timesteps per rollout\n",
         "K = 10    # Number of policy update epochs\n",
         "\n",
         "batch_size = 64\n",
@@ -707,17 +707,17 @@
         "for batch in tqdm.tqdm(range(nb_batches)):\n",
         "\n",
         "    # PPO Initialization\n",
-        "    advantages = torch.zeros(T, dtype=torch.float32, device=device)\n",
-        "    buffer_states = torch.zeros((T, state_dim), dtype=torch.float32, device=device)\n",
-        "    buffer_actions = torch.zeros((T, action_dim), dtype=torch.float32, device=device)\n",
-        "    buffer_log_probs = torch.zeros((T), dtype=torch.float32, device=device)\n",
-        "    buffer_state_values = torch.zeros((T+1), dtype=torch.float32, device=device)\n",
-        "    buffer_rewards = torch.zeros((T), dtype=torch.float32, device=device)\n",
-        "    buffer_is_terminal = torch.zeros((T), dtype=torch.float32, device=device)\n",
+        "    advantages = torch.zeros(max_timesteps_per_rollout, dtype=torch.float32, device=device)\n",
+        "    buffer_states = torch.zeros((max_timesteps_per_rollout, state_dim), dtype=torch.float32, device=device)\n",
+        "    buffer_actions = torch.zeros((max_timesteps_per_rollout, action_dim), dtype=torch.float32, device=device)\n",
+        "    buffer_log_probs = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
+        "    buffer_state_values = torch.zeros((max_timesteps_per_rollout+1), dtype=torch.float32, device=device)\n",
+        "    buffer_rewards = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
+        "    buffer_is_terminal = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
         "\n",
         "    # Episode control variables\n",
         "    episodes_completed_in_rollout = 0\n",
-        "    t = 0  # Actual timesteps collected\n",
+        "    t = 0  # Timesteps collected\n",
         "\n",
         "    # Env Initialization\n",
         "    obs, _ = env.reset()\n",
@@ -738,6 +738,7 @@
         "      # Episode Reset\n",
         "      obs, _ = env.reset()\n",
         "      state_manager.update(obs)\n",
+        "      t = 0\n",
         "\n",
         "      while not done:\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
@@ -763,7 +764,7 @@
         "        done = done or truncated\n",
         "\n",
         "        # Terminal conditions\n",
-        "        if info[\"crashed\"] or not env.unwrapped.vehicle.on_road:\n",
+        "        if info[\"crashed\"] or not env.unwrapped.vehicle.on_road or t>max_timesteps_per_rollout:\n",
         "            done = True\n",
         "\n",
         "        # Update state manager with new observation and applied longitudinal control\n",
