--- a/V3.ipynb
+++ b/V3.ipynb
@@ -644,6 +644,7 @@
         "# Define hyperparameters\n",
         "max_timesteps_per_rollout = 500  # Max timesteps per rollout\n",
         "K = 10    # Number of policy update epochs\n",
+        "test_rate = 5  # Test every 5 batches\n",
         "\n",
         "batch_size = 64\n",
         "gamma = 0.99\n",
@@ -772,6 +773,9 @@
         "    # Actual number of timesteps collected\n",
         "    actual_T = t\n",
         "\n",
+        "    # Print rollout info\n",
+        "    print(f\"Training Batch {batch}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
+        "\n",
         "    # Get final value for bootstrapping\n",
         "    if not done and actual_T > 0:\n",
         "        target_id = env.unwrapped.vehicle.lane_index[-1]\n",
@@ -851,11 +855,9 @@
         "            critic_loss.backward()       # Compute gradients for critic_loss w.r.t. critic_params\n",
         "            critic_optimizer.step()\n",
         "\n",
-        "    # Print rollout info\n",
-        "    print(f\"Training Batch {batch}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
         "\n",
         "    # Testing every 5 batches\n",
-        "    if batch % 5 == 0 and batch > 0:\n",
+        "    if batch % test_rate == 0 and batch > 0:\n",
         "        test_rewards = []\n",
         "\n",
         "        for test_ep in range(10):  # 10 test episodes\n",
@@ -900,7 +902,7 @@
         "        print(f\"Episode {batch}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
         "\n",
         "    # Plot every 5 btaches\n",
-        "    if batch % 5 == 0 and batch > 0 and batch_average_reward_history:\n",
+        "    if batch % test_rate*10 == 0 and batch > 0 and batch_average_reward_history:\n",
         "        plt.figure(figsize=(10, 6))\n",
         "        plt.plot(batch_episode_history, batch_average_reward_history, 'r-o', linewidth=2)\n",
         "        plt.title(f\"Test Performance (Batch {batch}, Max: {max_reward:.1f})\")\n",
@@ -916,7 +918,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "1ace46ff-414a-4e91-a9c1-ba9fe5d43d71"
+        "outputId": "007c94d3-abff-498b-f49d-73df3af3e820"
       },
       "execution_count": null,
       "outputs": [
@@ -924,14 +926,71 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  1%|          | 1/100 [00:05<09:27,  5.73s/it]"
+            "  1%|          | 1/100 [00:03<05:21,  3.25s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 31 timesteps, 10 episodes\n"
+            "Training Batch 0: Collected 3 timesteps, 10 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 2/100 [00:07<05:58,  3.66s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 1: Collected 13 timesteps, 10 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 3/100 [00:10<05:23,  3.34s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 2: Collected 10 timesteps, 10 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  4%|▍         | 4/100 [00:13<05:36,  3.50s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 3: Collected 9 timesteps, 10 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  5%|▌         | 5/100 [00:20<07:08,  4.51s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 4: Collected 21 timesteps, 10 episodes\n",
+            "Training Batch 5: Collected 23 timesteps, 10 episodes\n"
           ]
         }
       ]
