--- a/V3.ipynb
+++ b/V3.ipynb
@@ -706,6 +706,7 @@
         "    episode_return = 0.0\n",
         "    done = False\n",
         "    obs_old = obs\n",
+        "    actual_T = 0\n",
         "\n",
         "    # Collect trajectories with dual stopping condition\n",
         "    while episodes_completed_in_rollout < max_episodes_per_rollout:\n",
@@ -713,9 +714,10 @@
         "      # Episode Reset\n",
         "      obs, _ = env.reset()\n",
         "      state_manager.update(obs)\n",
-        "      t = 0\n",
         "      done = False\n",
         "      obs_old = obs\n",
+        "      episode_step = 0\n",
+        "      episode_return = 0.0\n",
         "\n",
         "      while not done:\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
@@ -770,9 +772,7 @@
         "            episodes_completed_in_rollout += 1\n",
         "            total_env_episodes += 1\n",
         "\n",
-        "    # Actual number of timesteps collected\n",
         "    actual_T = t\n",
-        "\n",
         "    # Print rollout info\n",
         "    print(f\"Training Batch {batch}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
         "\n",
@@ -918,7 +918,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "007c94d3-abff-498b-f49d-73df3af3e820"
+        "outputId": "1d53b307-0253-44c7-e8fd-72ec3c5555f5"
       },
       "execution_count": null,
       "outputs": [
@@ -926,71 +926,14 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  1%|          | 1/100 [00:03<05:21,  3.25s/it]"
+            "  1%|          | 1/100 [00:04<07:17,  4.41s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 3 timesteps, 10 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  2%|▏         | 2/100 [00:07<05:58,  3.66s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 1: Collected 13 timesteps, 10 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  3%|▎         | 3/100 [00:10<05:23,  3.34s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 2: Collected 10 timesteps, 10 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  4%|▍         | 4/100 [00:13<05:36,  3.50s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 3: Collected 9 timesteps, 10 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  5%|▌         | 5/100 [00:20<07:08,  4.51s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 4: Collected 21 timesteps, 10 episodes\n",
-            "Training Batch 5: Collected 23 timesteps, 10 episodes\n"
+            "Training Batch 0: Collected 92 timesteps, 10 episodes\n"
           ]
         }
       ]
