--- a/V3.ipynb
+++ b/V3.ipynb
@@ -645,6 +645,7 @@
         "max_timesteps_per_rollout = 500  # Max timesteps per rollout\n",
         "K = 10    # Number of policy update epochs\n",
         "test_rate = 5  # Test every 5 batches\n",
+        "num_test = 0\n",
         "\n",
         "batch_size = 64\n",
         "gamma = 0.99\n",
@@ -655,7 +656,7 @@
         "gae_lambda = 0.99\n",
         "\n",
         "# Episode counter\n",
-        "max_episodes_per_rollout = 10\n",
+        "max_episodes_per_rollout = 1\n",
         "nb_episodes = 1000\n",
         "nb_batches = round(nb_episodes/max_episodes_per_rollout)\n",
         "\n",
@@ -858,6 +859,7 @@
         "\n",
         "    # Testing every 5 batches\n",
         "    if batch % test_rate == 0 and batch > 0:\n",
+        "        num_test = 1\n",
         "        test_rewards = []\n",
         "\n",
         "        for test_ep in range(10):  # 10 test episodes\n",
@@ -901,8 +903,8 @@
         "\n",
         "        print(f\"Episode {batch}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
         "\n",
-        "    # Plot every 5 btaches\n",
-        "    if batch % test_rate*10 == 0 and batch > 0 and batch_average_reward_history:\n",
+        "    # Plot every 50 btaches\n",
+        "    if num_test % test_rate*10 == 0 and batch > 0 and batch_average_reward_history:\n",
         "        plt.figure(figsize=(10, 6))\n",
         "        plt.plot(batch_episode_history, batch_average_reward_history, 'r-o', linewidth=2)\n",
         "        plt.title(f\"Test Performance (Batch {batch}, Max: {max_reward:.1f})\")\n",
@@ -918,7 +920,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "1d53b307-0253-44c7-e8fd-72ec3c5555f5"
+        "outputId": "b70a26be-010f-4fae-ab6a-71020ac72add"
       },
       "execution_count": null,
       "outputs": [
@@ -926,14 +928,71 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  1%|          | 1/100 [00:04<07:17,  4.41s/it]"
+            "  0%|          | 1/1000 [00:00<08:05,  2.06it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 92 timesteps, 10 episodes\n"
+            "Training Batch 0: Collected 11 timesteps, 1 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 2/1000 [00:00<07:08,  2.33it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 1: Collected 9 timesteps, 1 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 3/1000 [00:01<06:07,  2.71it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 2: Collected 6 timesteps, 1 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 4/1000 [00:01<05:28,  3.03it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 3: Collected 4 timesteps, 1 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 5/1000 [00:01<05:51,  2.83it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 4: Collected 10 timesteps, 1 episodes\n",
+            "Training Batch 5: Collected 15 timesteps, 1 episodes\n"
           ]
         }
       ]
