--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "747038b0-c18b-41f4-e426-4b55f2755c06"
+        "outputId": "7b6d42b2-f1b1-4c99-9a9b-d355499601e1"
       },
       "outputs": [
         {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 18,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -122,24 +122,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "7803c7da-aaa3-468f-d861-1ecb6bcf3555"
+        "outputId": "18b06a39-8a98-467c-c015-f338052e47c1"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7f41a8d978d0>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7c5dd0bb1710>"
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 19
         }
       ],
       "source": [
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 20,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 64,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 22,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -529,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 23,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -569,13 +569,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 24,
       "metadata": {
         "id": "RYA-H09sIw2_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d3beb52-351a-4856-e6b0-9a0e0b67c7ea"
+        "outputId": "881c404e-6491-4f10-df5b-223b8209cc81"
       },
       "outputs": [
         {
@@ -639,6 +639,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Hyperparameters"
+      ],
+      "metadata": {
+        "id": "Rybk4w1dlqba"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Define hyperparameters\n",
@@ -677,8 +686,26 @@
         "batch_average_reward_history = []\n",
         "batch_episode_history = []\n",
         "individual_test_rewards = []\n",
-        "individual_test_episodes = []\n",
-        "\n",
+        "individual_test_episodes = []"
+      ],
+      "metadata": {
+        "id": "jbBscUzUlq5w"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Training Loop"
+      ],
+      "metadata": {
+        "id": "wegOHhwult8a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Training loop\n",
         "for batch in tqdm.tqdm(range(nb_batches)):\n",
         "\n",
@@ -720,7 +747,7 @@
         "      episode_step = 0\n",
         "      episode_return = 0.0\n",
         "\n",
-        "      while not done:\n",
+        "      while not done and t < max_timesteps_per_rollout:  # FIXED: Added t < max_timesteps_per_rollout\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
         "        activated_target_lane = gap_control.lane_checker()\n",
         "\n",
@@ -744,7 +771,7 @@
         "        done = done or truncated\n",
         "\n",
         "        # Terminal conditions\n",
-        "        if info[\"crashed\"] or not env.unwrapped.vehicle.on_road or t>max_timesteps_per_rollout:\n",
+        "        if info[\"crashed\"] or not env.unwrapped.vehicle.on_road or t >= max_timesteps_per_rollout:\n",
         "            done = True\n",
         "\n",
         "        # Update state manager with new observation and applied longitudinal control\n",
@@ -903,7 +930,7 @@
         "\n",
         "        print(f\"Episode {batch}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
         "\n",
-        "    # Plot every 50 btaches\n",
+        "    # Plot every 50 batches\n",
         "    if num_test % test_rate*10 == 0 and batch > 0 and batch_average_reward_history:\n",
         "        plt.figure(figsize=(10, 6))\n",
         "        plt.plot(batch_episode_history, batch_average_reward_history, 'r-o', linewidth=2)\n",
@@ -920,7 +947,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "b70a26be-010f-4fae-ab6a-71020ac72add"
+        "outputId": "dc111cb7-3dee-41d4-8801-39629b63b5c4"
       },
       "execution_count": null,
       "outputs": [
@@ -928,71 +955,71 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 1/1000 [00:00<08:05,  2.06it/s]"
+            "  0%|          | 1/1000 [00:00<09:17,  1.79it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 11 timesteps, 1 episodes\n"
+            "Training Batch 0: Collected 12 timesteps, 1 episodes\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 2/1000 [00:00<07:08,  2.33it/s]"
+            "\r  0%|          | 2/1000 [00:01<14:29,  1.15it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 1: Collected 9 timesteps, 1 episodes\n"
+            "Training Batch 1: Collected 20 timesteps, 1 episodes\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 3/1000 [00:01<06:07,  2.71it/s]"
+            "\r  0%|          | 3/1000 [00:01<10:13,  1.63it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 2: Collected 6 timesteps, 1 episodes\n"
+            "Training Batch 2: Collected 7 timesteps, 1 episodes\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 4/1000 [00:01<05:28,  3.03it/s]"
+            "\r  0%|          | 4/1000 [00:02<09:53,  1.68it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 3: Collected 4 timesteps, 1 episodes\n"
+            "Training Batch 3: Collected 15 timesteps, 1 episodes\n",
+            "Training Batch 4: Collected 4 timesteps, 1 episodes\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 5/1000 [00:01<05:51,  2.83it/s]"
+            "\r  0%|          | 5/1000 [00:02<07:29,  2.22it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 4: Collected 10 timesteps, 1 episodes\n",
-            "Training Batch 5: Collected 15 timesteps, 1 episodes\n"
+            "Training Batch 5: Collected 8 timesteps, 1 episodes\n"
           ]
         }
       ]
